infra/k8s/overlays/dev/db-deployment.yaml
"apiVersion": apps/v1
"kind": Deployment
"metadata":
  "name": db
  "namespace": simpelv2
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "app": db
  "template":
    "metadata":
      "labels":
        "app": db
    "spec":
      "restartPolicy": Always
      "containers":
      - "name": db
        "image": postgres:15
        "imagePullPolicy": IfNotPresent
        "ports":
        - "containerPort": 3000
        "volumeMounts":
        - "name": db-vol-0
          "mountPath": /var/lib/postgresql/data
          "readOnly": false
        "env":
        - "name": POSTGRES_USER
          "value": ${DB_USER}
        - "name": POSTGRES_PASSWORD
          "value": ${DB_PASS}
        - "name": POSTGRES_DB
          "value": ${DB_NAME}
      "volumes":
      - "name": db-vol-0
        "hostPath":
          "path": /var/www/simpelv2/pgdata
          "type": DirectoryOrCreate
