infra/k8s/overlays/dev/pidmil-deployment.yaml
"apiVersion": apps/v1
"kind": Deployment
"metadata":
  "name": pidmil
  "namespace": simpelv2
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "app": pidmil
  "template":
    "metadata":
      "labels":
        "app": pidmil
    "spec":
      "restartPolicy": Always
      "containers":
      - "name": pidmil
        "image": simpelv2/pidmil:latest
        "imagePullPolicy": IfNotPresent
        "ports":
        - "containerPort": 3000
        "volumeMounts": []
      "volumes": []
