infra/k8s/overlays/dev/pidsus-deployment.yaml
"apiVersion": apps/v1
"kind": Deployment
"metadata":
  "name": pidsus
  "namespace": simpelv2
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "app": pidsus
  "template":
    "metadata":
      "labels":
        "app": pidsus
    "spec":
      "restartPolicy": Always
      "containers":
      - "name": pidsus
        "image": simpelv2/pidsus:latest
        "imagePullPolicy": IfNotPresent
        "ports":
        - "containerPort": 3000
        "volumeMounts": []
      "volumes": []
