infra/k8s/overlays/dev/src-deployment.yaml
"apiVersion": apps/v1
"kind": Deployment
"metadata":
  "name": src
  "namespace": simpelv2
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "app": src
  "template":
    "metadata":
      "labels":
        "app": src
    "spec":
      "restartPolicy": Always
      "containers":
      - "name": src
        "image": simpelv2/src:latest
        "imagePullPolicy": IfNotPresent
        "ports":
        - "containerPort": 7000
        "volumeMounts": []
      "volumes": []
