infra/k8s/overlays/dev/db-simpelv2-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": db-simpelv2
  "namespace": simpelv2
"spec":
  "selector":
    "app": db-simpelv2
  "ports":
  - "name": port-0
    "port": 5432
    "targetPort": 5432
