infra/k8s/overlays/dev/gerbang-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": gerbang
  "namespace": simpelv2
"spec":
  "selector":
    "app": gerbang
  "ports":
  - "name": port-0
    "port": 8080
    "targetPort": 8080
  - "name": port-1
    "port": 9901
    "targetPort": 9901
