infra/k8s/overlays/dev/pidmil-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": pidmil
  "namespace": simpelv2
"spec":
  "selector":
    "app": pidmil
  "ports":
  - "name": port-0
    "port": 3006
    "targetPort": 3000
