infra/k8s/overlays/dev/pidsus-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": pidsus
  "namespace": simpelv2
"spec":
  "selector":
    "app": pidsus
  "ports":
  - "name": port-0
    "port": 3007
    "targetPort": 3000
