infra/k8s/overlays/dev/portal-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": portal
  "namespace": simpelv2
"spec":
  "selector":
    "app": portal
  "ports":
  - "name": port-0
    "port": 3009
    "targetPort": 80
