infra/k8s/overlays/dev/src-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": src
  "namespace": simpelv2
"spec":
  "selector":
    "app": src
  "ports":
  - "name": port-0
    "port": 7001
    "targetPort": 7000
