infra/k8s/overlays/dev/ingress.yaml
"apiVersion": networking.k8s.io/v1
"kind": Ingress
"metadata":
  "name": simpelv2-ingress
  "namespace": simpelv2
  "annotations":
    "nginx.ingress.kubernetes.io/rewrite-target": /$1
    "nginx.ingress.kubernetes.io/ssl-redirect": 'false'
"spec":
  "tls": []
  "rules":
  - "host": simpelv2.local
    "http":
      "paths":
      - "path": /badiklat(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": badiklat
            "port":
              "number": 3000
      - "path": /datun(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": datun
            "port":
              "number": 3000
      - "path": /intel(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": intel
            "port":
              "number": 3000
      - "path": /pembinaan(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": pembinaan
            "port":
              "number": 3000
      - "path": /pemulihan-aset(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": pemulihan-aset
            "port":
              "number": 3000
      - "path": /pengawasan(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": pengawasan
            "port":
              "number": 3000
      - "path": /pidmil(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": pidmil
            "port":
              "number": 3000
      - "path": /pidsus(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": pidsus
            "port":
              "number": 3000
      - "path": /pidum(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": pidum
            "port":
              "number": 3000
      - "path": /portal(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": portal
            "port":
              "number": 80
      - "path": /gerbang(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": gerbang
            "port":
              "number": 8080
      - "path": /src(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": src
            "port":
              "number": 7000
      - "path": /db(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": db
            "port":
              "number": 3000
      - "path": /db-simpelv2(/|$)(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": db-simpelv2
            "port":
              "number": 5432
      - "path": /(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": gerbang
            "port":
              "number": 8080
